# ssh-cred-manager-python

./: .gitignore  CLAUDE.md  README.md  install.sh  main.py  pyproject.toml
cli/: __init__.py  connection_panel.py
core/: __init__.py  config.py  credential_manager.py  models.py
ssh/: __init__.py  connection.py
utils/: __init__.py  crypto_utils.py  storage.py
