[project]
name = "ssh-cred-manager-python"
version = "0.1.0"
description = "A CLI tool to manage SSH credentials easily without manual alias creation, with seamless machine migration support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "keyring>=25.7.0",
    "paramiko>=4.0.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "typer>=0.20.0",
    "questionary>=2.0.1",
]

[project.scripts]
ssh-cred = "main:app"
ssc = "main:app"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["main", "core", "cli", "ssh", "utils"]
